[package]
name = "validated"
version = "1.0.0"
authors = ["Colin Woodbury <colin@fosskers.ca>", "John Archer <archer884@gmail.com>"]
edition = "2024"
description = "The cumulative sibling of `Result` and `Either`."
homepage = "https://github.com/fosskers/validated"
repository = "https://github.com/fosskers/validated"
readme = "README.md"
license = "MIT"
keywords = ["validation", "errors"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
nonempty-collections = "1.0"
rayon = { version = "1.10", optional = true }
